# de-voc

./: .env.example  .gitignore  German_voc 🇩🇪.xlsx  README.md  app.js  index.html  pyproject.toml  style.css  vocab.json
backend/: database.py  main.py  migrate_db.py  models.py  schemas.py
backend/routers/: __init__.py  llm.py  review.py  stats.py  vocabularies.py
backend/services/: dictionaries.py  importer.py  llm_service.py  srs.py  vocabulary.py
backend/services/llm/: __init__.py  base.py  claude_provider.py  gemini_provider.py  openai_provider.py
data/: README.md
docs/: ARCHITECTURE.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ManagerView.tsx  ReviewView.tsx
frontend/src/lib/: api.ts  i18n.tsx  tagTranslations.ts
frontend/src/types/: api.ts
scripts/: README.md  anomaly_checker.py  convert.py
tests/: test_backend_foundation.py
